@@ -1,14 +1,13 @@
 package fr.afpa.pompey.APIEcommerce.security;
 
-import fr.afpa.pompey.APIEcommerce.model.User;
-import fr.afpa.pompey.APIEcommerce.repository.UserRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
+import fr.afpa.pompey.APIEcommerce.model.User;
+import fr.afpa.pompey.APIEcommerce.repository.UserRepository;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -29,9 +28,9 @@ public class CustomUserDetailsService implements UserDetailsService {
                 user.getPassword(),
                 user.getRoles()
                         .stream()
-                        .map(role -> new SimpleGrantedAuthority(role.getName()))
-                        .collect(Collectors.toList())
-        );
+                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role
+                                .getName()))
+                        .toList());
     }
 
 }
